--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
      </div>
    </div>
    <button id="reset-btn">Reset Game</button>
-   <script src="D:\Practice Program\Javascript\Tic  Tac Game\app.js"></script>
+   <script src="app.js"></script>
 </body>
 </html>
